@@ -67,7 +67,7 @@ The table below provides links to detailed overviews and tutorials.
 - <a href="https://github.com/JPNaude/Qtilities/issues">Issue Tracker</a><br>
 - <a href="https://github.com/JPNaude/Qtilities">Source Repository</a><br>
 - <a href="http://groups.google.com/group/qtilities?hl=en?hl=en/">Mailing List</a><br>
-- <a href="page_whats_new_v1_1.html">What's New</a><br>
+- <a href="page_whats_new_v1_2.html">What's New</a><br>
 </td>
 </tr>
 </table>
