@@ -9,6 +9,7 @@ Much like the way QDataStream::version() functionality allows easy management of
 This page gives an overview of the different versions used in %Qtilities.
 - \ref page_serializing_overview_1_0.
 - \ref page_serializing_overview_1_1.
+- \ref page_serializing_overview_1_2.
 <br>
 
 
