@@ -295,29 +295,6 @@ sure that categories are handled the same way everywhere. Some usages in %Qtilit
                     return QString();
             }
 
-//            //! Gets the QIcon associated with this category.
-//            /*!
-//              By default all QtilitiesCategory objects returns QIcon().
-
-//              <i>This function was added in %Qtilities v1.2.</i>
-//              */
-//            QIcon categoryIcon() const {
-//                if (d_category_icon)
-//                    return *d_category_icon;
-
-//                return QIcon();
-//            }
-//            //! Sets the QIcon associated with this category.
-//            /*!
-//              <i>This function was added in %Qtilities v1.2.</i>
-//              */
-//            void setCategoryIcon(QIcon category_icon) {
-//                if (d_category_icon)
-//                    delete d_category_icon;
-
-//                d_category_icon = new QIcon(category_icon);
-//            }
-
             // --------------------------------
             // IObjectBase Implementation
             // --------------------------------
