@@ -23,6 +23,7 @@ OTHER_FILES += ../doc/sources/Action_Management.html
 OTHER_FILES += ../Readme.md
 OTHER_FILES += ../doc/sources/Whats_New_v1_0.html
 OTHER_FILES += ../doc/sources/Whats_New_v1_1.html
+OTHER_FILES += ../doc/sources/Whats_New_v1_2.html
 OTHER_FILES += ../doc/sources/Documentation_Overview.html
 OTHER_FILES += ../doc/sources/Examples_And_Plugins.html
 OTHER_FILES += ../doc/sources/Extension_System.html
@@ -43,6 +44,7 @@ OTHER_FILES += ../doc/sources/Widget_Set.html
 OTHER_FILES += ../doc/sources/Serializing_Overview.html
 OTHER_FILES += ../doc/sources/Serializing_Types_1_0.html
 OTHER_FILES += ../doc/sources/Serializing_Types_1_1.html
+OTHER_FILES += ../doc/sources/Serializing_Types_1_2.html
 OTHER_FILES += ../doc/sources/Tasking.html
 OTHER_FILES += ../doc/sources/Debugging_Qtilities_Applications.html
 OTHER_FILES += ../Changelog.txt
